<resources>
    <string name="app_name">homework</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterText1">Введите первое число</string>
    <string name="enterButton1">Ввод</string>
    <string name="enterText2">Введите второе число</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMultiply">*</string>
    <string name="textResultAnnotation">Результат операции:</string>
    <string name="frStack1">1</string>
    <string name="frStack2">2</string>
    <string name="frStack4">4</string>
    <string name="frStack3">3</string>
</resources>
