<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment3">

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:text="@string/buttonPlus"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:text="@string/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonMultiply"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />
</android.support.constraint.ConstraintLayout>